NetBSD Problem Report #44229

From www@NetBSD.org  Mon Dec 13 11:26:27 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id CEC9D63B883
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 13 Dec 2010 11:26:27 +0000 (UTC)
Message-Id: <20101213112627.B1E6A63B87A@www.NetBSD.org>
Date: Mon, 13 Dec 2010 11:26:27 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Duplicated chekc.
X-Send-Pr-Version: www-1.0

>Number:         44229
>Category:       bin
>Synopsis:       Duplicated chekc.
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Dec 13 11:30:00 +0000 2010
>Closed-Date:    Tue Dec 21 06:08:46 +0000 2010
>Last-Modified:  Tue Dec 21 06:08:46 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Duplicated checks of space and tabs.
>How-To-Repeat:

>Fix:
diff -u -r1.78 parser.c
--- bin/sh/parser.c	17 Nov 2010 13:40:48 -0000	1.78
+++ bin/sh/parser.c	13 Dec 2010 10:59:34 -0000
@@ -814,8 +814,7 @@
 	startlinno = plinno;
 	for (;;) {	/* until token or start of word found */
 		c = pgetc_macro();
-		if (c == ' ' || c == '\t')
-			continue;		/* quick check for white space first */
+
 		switch (c) {
 		case ' ': case '\t':
 			continue;

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44229 CVS commit: src/bin/sh
Date: Mon, 13 Dec 2010 11:54:04 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Dec 13 16:54:04 UTC 2010

 Modified Files:
 	src/bin/sh: parser.c

 Log Message:
 PR/44229: Henning Petersen: Remove dup check for whitespace.


 To generate a diff of this commit:
 cvs rdiff -u -r1.78 -r1.79 src/bin/sh/parser.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 21 Dec 2010 06:08:46 +0000
State-Changed-Why:
Christos fixed it.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.