PR/44229: Henning Petersen: Remove dup check for whitespace.